# cellular_automata_fire_simulation

./: CMakeLists.txt  README.md  compile.sh  valgrind_run.sh
common/: CMakeLists.txt  cp_common.h  cp_log.c
cpu_implementation/: CMakeLists.txt  constants.h  cpu_cell.h  cpu_grid.c  cpu_grid.h  cpu_simulation.c  cpu_simulation.h  cpu_thread_args.h  main.c
kernels/: cellular_automata_fire.cl  offset_test.cl
opencl_implementation/: CMakeLists.txt  constants.h  main.c  opencl_utility.c  opencl_utility.h  print_info.c
sdl/: CMakeLists.txt  cp_sdl.c  cp_sdl.h  main.c
